--- a/src/main/webapp/resources/css/newstyles/style.css
+++ b/src/main/webapp/resources/css/newstyles/style.css
@@ -825,25 +825,42 @@ width: auto;
 padding: 7px 2px;
 padding-left: 10px;
 text-decoration: none;
-border:1px solid #000;
-background: #3bb9ff;
+
+/* background: #3bb9ff;
   
   background-repeat: repeat-x;
 
-  /* Safari 4-5, Chrome 1-9 */
+  Safari 4-5, Chrome 1-9
   background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#3bb9ff), to(#0066cc));
 
-  /* Safari 5.1, Chrome 10+ */
+  Safari 5.1, Chrome 10+
   background: -webkit-linear-gradient(top, #3bb9ff, #0066cc);
 
-  /* Firefox 3.6+ */
+  Firefox 3.6+
   background: -moz-linear-gradient(top, #3bb9ff, #0066cc);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3bb9ff', endColorstr='#0066cc'); /* for IE */
-  /* IE 10 */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3bb9ff', endColorstr='#0066cc'); for IE
+  IE 10
   background: -ms-linear-gradient(top, #3bb9ff, #0066cc);
 
+  Opera 11.10+
+  background: -o-linear-gradient(top, #3bb9ff, #0066cc); */
+  
+    background: #003366;
+  background-repeat: repeat-x;
+  /* Safari 4-5, Chrome 1-9 */
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0066cc), to(#003366));
+
+  /* Safari 5.1, Chrome 10+ */
+  background: -webkit-linear-gradient(top, #0066cc, #003366);
+
+  /* Firefox 3.6+ */
+  background: -moz-linear-gradient(top, #0066cc, #003366);
+
+  /* IE 10 */
+  background: -ms-linear-gradient(top, #0066cc, #003366);
+
   /* Opera 11.10+ */
-  background: -o-linear-gradient(top, #3bb9ff, #0066cc);
+  background: -o-linear-gradient(top, #0066cc, #003366);
 }
 
 
@@ -1080,9 +1097,13 @@ padding-left: 10px;
 	height: 300px;
 	max-height: 500px;
 	overflow: auto;
-	margin:4% 0 0 0;
+	border:2px solid #ccc;
+	
 }
-
+.report_table_innertop{
+	
+	margin:5% 0 0 0;
+}
 .report_table_inner_1{
 	border:2px solid #ccc;
 	border-radius:5px;
@@ -1772,11 +1793,11 @@ background:-webkit-gradient(linear, 0 0, 0 100%, from(#ccc), to(#fff));
 .otherspressable {
 	background-color:#3bb3e0;
 	font-family: 'Open Sans', sans-serif;
-	font-size:12px;
+	font-size:14px;
 	text-decoration:none;
 	color:#fff;
 	position:relative;
-	padding:10.55px 2px;
+	padding:10.55px 15.2px;
 	border-left:solid 1px #2ab7ec;
 	margin-left:35px;
 	background-image: linear-gradient(bottom, rgb(44,160,202) 0%, rgb(62,184,229) 100%);
@@ -2030,18 +2051,25 @@ Third button
 	align:center;
 }
 .searchdiv{
-	margin:-43px 0 0 910px;
+	margin:-43px 0 0 810px;
 	width:auto;
 	height:auto;
+	text-shadow:none;
+	font-weight:bold;
 }
 .Three-DeePjtHeader{
-font-family: Garamond, serif;
+	font-family: Garamond, serif;
 line-height: 1em;
-color: #ffffff;
+/* color: #ffffff; */
+color: White;
 font-weight:bold;
-font-size: 50px;
-text-shadow:0px 0px 0 rgb(231,231,231),1px 1px 0 rgb(216,216,216),2px 2px 0 rgb(202,202,202),3px 3px 0 rgb(187,187,187),4px 4px 0 rgb(173,173,173),5px 5px 0 rgb(158,158,158), 6px 6px 0 rgb(144,144,144),7px 7px 6px rgba(0,0,0,0.6),7px 7px 1px rgba(0,0,0,0.5),0px 0px 6px rgba(0,0,0,.2);
-}
+font-size: 40px;
+/* text-shadow:0px 0px 0 rgb(231,231,231),1px 1px 0 rgb(216,216,216),2px 2px 0 rgb(202,202,202),3px 3px 0 rgb(187,187,187),4px 4px 0 rgb(173,173,173),5px 5px 0 rgb(158,158,158), 6px 6px 0 rgb(144,144,144),7px 7px 6px rgba(0,0,0,0.6),7px 7px 1px rgba(0,0,0,0.5),0px 0px 6px rgba(0,0,0,.2);
+ */
+ /* text-shadow:0px 0px 0 rgb(35,162,231),1px 1px 0 rgb(20,147,216),2px 2px 0 rgb(6,133,202),3px 3px 0 rgb(-9,118,187),4px 4px 0 rgb(-23,104,173),5px 5px 0 rgb(-38,89,158), 6px 6px 0 rgb(-52,75,144),7px 7px 6px rgba(0,0,0,0.6),7px 7px 1px rgba(0,0,0,0.5),0px 0px 6px rgba(0,0,0,.2);
+  */
+  
+  }
 
 .ThreeDee{
 font-family: Garamond, serif;
