--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -133,10 +133,10 @@ ul.login-list li p {
 }
 #header {
 height:100px;
-background: #3bb9ff; /* for non-css3 browsers */
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cccccc', endColorstr='#666'); /* for IE */
-background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#666)); /* for webkit browsers */
-background: -moz-linear-gradient(top, #ccc, #666); /* for firefox 3.6+ */
+background: #666; /* for non-css3 browsers */
+/* filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EEEEEE', endColorstr='#3366cc'); for IE
+background: -webkit-gradient(linear, left top, left bottom, from(#EEEEEE), to(#3366cc)); for webkit browsers
+background: -moz-linear-gradient(top, #EEEEEE, #6600cc); for firefox 3.6+ */
 }
 /* New CSS */
 #right_content {
@@ -172,7 +172,7 @@ background: -moz-linear-gradient(top, #ccc, #666); /* for firefox 3.6+ */
 
 .report_table{
 	width:100%;
-	height: auto;
+	height: 600px;
 	margin:0% 0 0 0 ;
 	
 }
@@ -214,14 +214,14 @@ background: -moz-linear-gradient(top, #ccc, #666); /* for firefox 3.6+ */
 	width:100%;
 	padding-bottom:10px ;
 	padding-top: 20px ;
-	color:#fff;
+	color:#000;
 	border: 1px solid #CACACA;
 	text-shadow: 1px 1px 1px #fff;
 	/* background: #EAEAEA url(../images/bg_heading.png) repeat-x top; */
 	background: #999; /* for non-css3 browsers */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cccccc', endColorstr='#666'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#666)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #ccc, #666); /* for firefox 3.6+ */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EEE', endColorstr='#CCC'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#EEE), to(#ccc)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #EEE, #ccc); /* for firefox 3.6+ */
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 	-moz-border-radius-topright: 10px;
@@ -230,11 +230,12 @@ background: -moz-linear-gradient(top, #ccc, #666); /* for firefox 3.6+ */
 	height: 25px;
 }
 .headings h2 {
-	letter-spacing:2px;
+	letter-spacing:1px;
 	padding-top: 0px;
 	padding-left: 10px;
 	font-size: 17px;
-	color:#fff;
+	color:#000;
+	
 }
 .headingsnew {
 	padding-bottom: 15px ;
@@ -1305,4 +1306,16 @@ input[type="password"]:focus {
 }
 .tdfixedwidth{
 	overflow:hidden;
+}
+
+
+/* School bus image div */
+.school_div
+{
+	width:250px;
+	height:70px;
+	
+	float:left;
+	margin-top:10px;
+	
 }
