--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -333,6 +333,13 @@ background: -moz-linear-gradient(top, #EEEEEE, #6600cc); for firefox 3.6+ */
 	border-bottom:1px solid #e5e5e5;
 	font-size:12px;
 }
+.row td {
+	background:#fff;
+	padding:5px 10px;
+	font-size:11px;
+	line-height:16px;
+	font-size:12px;
+}
 .row2 td {
 	background:#f5f5f5;
 	padding:5px 10px;
